# metroidvania

./: .gitignore  CMakeLists.txt  build.sh  flake.nix
include/: common.hpp  player.hpp  tilemap.hpp
src/: main.cpp  player.cpp  tilemap.cpp
